--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang="fr">
   <head>
+    <link rel="client\src\styles\index.css">
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS Monorepo</title>
+    <title>Plants'In</title>
   </head>
   <body>
     <div id="root"></div>
