début de CSS, modif de la page About

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="client\src\styles\index.css">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/images/logo-chef.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cook'In</title>
     <link rel="stylesheet" href="./src/styles/index.css">
